# mojosetup

./: CMakeLists.txt  LICENSE.txt  README.md  archive_pck.c  archive_pkg.c  archive_tar.c  archive_uz2.c  archive_zip.c  buildver.c  checksum_crc32.c  checksum_sha1.c  docs.txt  fileio.c  fileio.h  gui.c  gui.h  gui_cocoa.m  gui_gtk4.c  gui_gtkplus2.c  gui_gtkplus3.c  gui_macosx.c  gui_ncurses.c  gui_stdio.c  gui_www.c  lua_glue.c  lua_glue.h  makefile  miniz.h  misc.c  mojosetup.c  platform.h  platform_beos.c  platform_beos.cpp  platform_unix.c  platform_windows.c  schema.lua  setup.lua  stb_image.c  translations.lua  universal.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
examples/: build-example.sh
examples/aquaria/: details.txt  make.sh
examples/aquaria/scripts/: app_localization.lua  config.lua
examples/braid/: details.txt  make.sh
examples/braid/scripts/: app_localization.lua  config.lua
examples/cogs/: details.txt  make.sh
examples/cogs/scripts/: app_localization.lua  config.lua
examples/dearesther/: details.txt
examples/dearesther/scripts/: app_localization.lua  config.lua
examples/duke3d/: details.txt  make.sh
examples/duke3d/data/: duke3d_readme.txt  gpl.txt  mojosetup_readme.txt
examples/duke3d/scripts/: app_localization.lua  config.lua
examples/dungeondefenders/: details.txt
examples/dungeondefenders/scripts/: app_localization.lua  config.lua
examples/hammerfight/: details.txt  make.sh
examples/hammerfight/scripts/: app_localization.lua  config.lua
examples/limbo/: details.txt
examples/limbo/scripts/: config.lua
examples/lugaru/: details.txt  make.sh
examples/lugaru/scripts/: app_localization.lua  config.lua
examples/postal1/: details.txt  make.sh
examples/postal1/scripts/: app_localization.lua  config.lua
examples/postal2/: details.txt  make.sh
examples/postal2/scripts/: config.lua
examples/postal2aw/: details.txt  make.sh
examples/postal2aw/scripts/: app_localization.lua  config.lua
examples/prey/: details.txt  make.sh
examples/prey-demo/: details.txt  make.sh
examples/prey-demo/scripts/: app_localization.lua  config.lua
examples/prey/scripts/: app_localization.lua  config.lua
examples/psychonauts/: details.txt
examples/psychonauts/scripts/: app_localization.lua  config.lua
examples/shank/: details.txt  make.sh
examples/shank/scripts/: app_localization.lua  config.lua
examples/spaz/: details.txt
examples/spaz/scripts/: config.lua
examples/supermeatboy/: details.txt  make.sh
examples/supermeatboy/scripts/: config.lua
examples/ut3-dedicated/: details.txt  make.sh
examples/ut3-dedicated-patches/: details.txt  make.sh
examples/ut3-dedicated-patches/data/: README-ut3-patch2.txt  UT3-linux-server-EULA.txt
examples/ut3-dedicated-patches/scripts/: config.lua
examples/ut3-dedicated/scripts/: config.lua
gui/: gui_macosx.c  gui_stdio.c
libfetch/: README.txt  common.c  common.h  fetch.c  fetch.h  file.c  ftp.c  http.c  mojosetup_libfetch.h
liblzma/: README.txt
liblzma/api/lzma/: base.h  container.h
liblzma/common/: index.c
lua/: config.lua  localization.lua  mojosetup_init.lua  mojosetup_mainline.lua  translations.lua
lua/src/: luaconf.h
meta/xdg-utils/: xdg-desktop-menu  xdg-open
misc/: FindCurses.cmake  MojoSetup.xib  launchpad-import.sh  localization2pot.pl  make_self_extracting.c  po2localization.pl  poize.lua
platform/: beos.c  beos.cpp  unix.c
scripts/: app_localization.lua  config.lua  localization.lua  loki_setup_compat.lua  mojosetup_init.lua  mojosetup_mainline.lua
zlib/: version.txt
zlib123/: zconf.h
